--- a/_posts/2021-07-28-数据仓库文档.md
+++ b/_posts/2021-07-28-数据仓库文档.md
@@ -10,7 +10,7 @@
 
 **1） oneData建模理论:**  https://developer.aliyun.com/article/771546
 
-![img](./img/1.1.1 onedata.jpg)
+![img](../blogImg/img/1.1.1 onedata.jpg)
 
 
 
@@ -60,7 +60,7 @@
 
 总线矩阵提供一种分解企业DW/BI规划任务的合理方式，行是业务过程，列是公共维度（一致性维度），图表中的X表示的是哪些列与哪些行有关系，也表示这一个业务过程需要有哪些公共维度。先看一个总线矩阵的示例图（出自kimball的书）：
 
-![img](./img/1.1.1 图二.png)
+![img](../blogImg/img/1.1.1 图二.png)
 
 在多维体系结构（MD） 的数据仓库架构中，主导思想是分步建立数据仓库，由数据集市组合成企业的数据仓库。但是，在建立第一个数据集市前，架构师首先要做的就是设计出在整个企业内具有统一解释的标准化的维度和事实，即一致性维度和一致性事实。而开发团队必须严格的按照这个体系结构来进行数据集市的迭代开发。
 
@@ -165,7 +165,7 @@
 **1）Lambda架构**
 
 
-![img](./img/1.1.1.3 图1.png)
+![img](../blogImg/img/1.1.1.3 图1.png)
 
 Lambda架构主要由这几部分构成：
 
@@ -197,7 +197,7 @@ Lambda也有很多问题。
 
 **2）Kappa架构**
 
-![img](./img/1.1.1.3 图二kappa.png)
+![img](../blogImg/img/1.1.1.3 图二kappa.png)
 
 Kafka或者其他消息中间件，具备保留多日数据的能力。正常情况下kafka都是吐出实时数据，经过实时处理系统，进入服务数据库（Serving DB）。
 
@@ -226,7 +226,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 
 
-![img](./img/1.1.1.3 图三.png)
+![img](../blogImg/img/1.1.1.3 图三.png)
 
 
 
@@ -236,7 +236,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 ### 1.1.2 建模阶段设计
 
-![img](./img/1.1.2 图一.jpg)
+![img](../blogImg/img/1.1.2 图一.jpg)
 
 ------
 
@@ -256,7 +256,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 构建业务实体模型图，梳理业务过程，分析出业务总线矩阵。
 
-![img](./img/1.1.2.1 图1.png)
+![img](../blogImg/img/1.1.2.1 图1.png)
 
 ------
 
@@ -280,7 +280,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 构建星座模型，示例如下：
 
-![img](./img/1.1.2.2 图1.jpg)
+![img](../blogImg/img/1.1.2.2 图1.jpg)
 
 ------
 
@@ -324,7 +324,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 （结合企业已有业务线）
 
-![1627442280282](./img/1.2.1.2.png)
+![1627442280282](../blogImg/img/1.2.1.2.png)
 
 ------
 
@@ -430,7 +430,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 ODS层(在这里叫的src)
 
-![](./img/1.2.21.png)
+![](../blogImg/img/1.2.21.png)
 
 
 
@@ -438,7 +438,7 @@ ODS层(在这里叫的src)
 
 （示例： ）
 
-![](./img/1.2.2.1.png)
+![](../blogImg/img/1.2.2.1.png)
 
 
 
