--- a/_posts/ETL/2021-08-11-Debezium简介（一）.md
+++ b/_posts/ETL/2021-08-11-Debezium简介（一）.md
@@ -44,7 +44,7 @@ Kafka确保所有这些数据更改事件都能够多副本并且总体上有序
 
 下图显示了一个基于Debezium的CDC管道的架构:
 
-![](../blogimg/images/202108111043.png)
+![](../../blogimg/images/202108111043.png)
 
 
 
