--- a/_posts/JiaGou/2021-12-24-大数据架构师能力概览.md
+++ b/_posts/JiaGou/2021-12-24-大数据架构师能力概览.md
@@ -67,7 +67,7 @@ cloudera hortonworks 新平台 CDP
  
 ```
 
-![](../blogImg/images/202112240947.png)
+![](../../blogImg/images/202112240947.png)
 
 
 
@@ -630,7 +630,7 @@ ETL
 
 #### **9.企业数据化成熟度进化路径**
 
-![](../blogImg/images/202112244055.png)
+![](../../blogImg/images/202112244055.png)
 
 
 
@@ -1182,9 +1182,9 @@ ETL
 
 ​									等级特权(案例)
 
-![](../blogImg/images/202112241408.png)
+![](../../blogImg/images/202112241408.png)
 
-![](../blogImg/images/202112241407.png)
+![](../../blogImg/images/202112241407.png)
 
 ​			
 
@@ -1192,7 +1192,7 @@ ETL
 
 ​						基本指标(示例)
 
-![](../blogImg/images/202112241409.png)
+![](../../blogImg/images/202112241409.png)
 
 ​						注册 登陆 搜索 下单 购物车 等
 ​						活跃
@@ -1206,16 +1206,16 @@ ETL
 
 ​						留存
 
-![](../blogImg/images/202112241411.png)
+![](../../blogImg/images/202112241411.png)
 
 ##### 				生命周期
 
-![](../blogImg/images/202112241413.png)
+![](../../blogImg/images/202112241413.png)
 
 ​					运营策略
 ​						制定目标
 
-![](../blogImg/images/202112241414.png)
+![](../../blogImg/images/202112241414.png)
 
 ​				策略节奏
 ​						集中营销
@@ -1224,11 +1224,11 @@ ETL
 
 ​						核心目标及价值营销
 
-![](../blogImg/images/202112241415.png)
+![](../../blogImg/images/202112241415.png)
 
 ​						**裂变计划**
 
-![](../blogImg/images/202112241416.png)
+![](../../blogImg/images/202112241416.png)
 
 ​				
 
@@ -1236,7 +1236,7 @@ ETL
 
 ​				用户分群(案例)
 
-![](../blogImg/images/202112241418.png)
+![](../../blogImg/images/202112241418.png)
 
 ​				**产品运营**
 ​						内容运营
