--- a/_posts/2022-10-10-资源大全(不定时更新).md
+++ b/_posts/2022-10-10-资源大全(不定时更新).md
@@ -1,5 +1,9 @@
 今日热榜网 https://tophub.today/
 
+新闻导航网站 https://gosbook.cn/ 
+
+牛媒网 https://media.beer/ 
+
 **介绍：** 时事热点，各个内容网站的热榜新闻、话题、精华帖
 
 
@@ -7,6 +11,8 @@
 书享家  http://shuxiangjia.cn/
 
 z-library  https://find.looks.wang/account.php
+
+书单网  https://shudan.vip/
 
 **介绍：** 电子书分享网站
 
@@ -106,4 +112,54 @@ addog https://www.addog.vip/
 
 资源狗 https://www.ziyuangou.com/
 
+万有导航 http://wanyouw.com/
+
 **介绍：** 各类导航网站
+
+
+
+
+
+国家税务总局增值税发票查验平台： https://inv-veri.chinatax.gov.cn/
+
+北京机打发票查验： https://etax.beijing.chinatax.gov.cn/ptfp/fpindex.jsp
+
+
+
+国家统计局 https://data.stats.gov.cn/
+
+消费站 https://www.cbndata.com/
+
+
+
+
+
+观影导航： 
+
+https://www.549.tv/
+
+https://libvio.fun/ 
+
+
+
+政策类新闻：
+
+https://www.51bmj.cn/  科技产业政策推送查询平台-企业项目申报立项查询网-高新技术企业认定网
+
+http://www.shenkexin.com/index.html 深科信 - 科创在线一站式服务平台
+
+
+
+**财经类：**
+
+财新网 https://www.caixin.com/
+
+
+
+**政策类：**
+
+人民网 http://www.people.com.cn/ 
+
+新华网 http://www.news.cn/
+
+澎湃新闻 https://www.thepaper.cn/
