--- a/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
+++ b/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
@@ -8,7 +8,7 @@
 
 **1） oneData建模理论:**  https://developer.aliyun.com/article/771546
 
-![img](../../../blogImg/img/1.1.1 onedata.jpg)
+![img](../../blogImg/img/1.1.1 onedata.jpg)
 
 
 
@@ -70,11 +70,19 @@
 
 
 
+Kimball 的模型是自底向上的，自下而上，维度建模；**以最终任务（需求）为导向**，将数据按照目标拆分出不同的表需求，通过 ETL 导入数据集市层
+
+先按照业务主线建立最小粒度的事实表；
+
+再建立维度表，形成数据集市；在数据集市将事实表和维度表根据**分析主题**组合后导入数据仓库中，用于数据分析
+
+通过“一致维度”能够共同看到不同数据集市的信息；
+
 ------
 
 
 
-#### 名称解释
+#### 1.1.1.1 名称解释
 
 - **业务板块**： 比数据域更高维度的业务划分方法，适用于庞大的业务系统。逻辑空间的定义，是基于业务特征划分的命名空间。
 
@@ -156,9 +164,182 @@
 
 ------
 
+#### 1.1.1.2 数仓构建流程 
+
+##### **1.1.1.2.1. 需求分析** 
+
+需求来源/需求调研方式：内部讨论、客户访谈 和 调查问卷。
+
+**1）角度一： 企业领导层**
+领导层对数据仓库的期望是什么 ?
+领导层最关心哪几个指标 ?
+领导层希望以何种方式来看这些指标 ?
+领导层希望对这些指标进行哪些方面的比较 ?
+......
+
+（数仓定位； 关心的核心指标；数据展示的形式； 指标用于决策的价值；）
 
 
-#### 数仓架构
+
+**2) 角度二： 中间管理层**
+中间管理层对数据仓库的期望是什么?
+中间管理层希望以何种方式来看这些指标?
+平时领导层通常询问哪些指标?在这些指标中哪几个和此分析主题有关?
+中间管理层对下属的工作人员都考核哪些指标?哪几个指标与此分析主题有关?
+......
+
+（数仓可以为哪些业务和部门用； 指标提供服务的形式；关心的核心指标、分类管理、指标体系等； 指标用于运营、部门间调用、交换等的价值；）
+
+
+
+**3）角度三： 产品和业务人员**
+业务人员对数据仓库的期望是什么?
+业务人员希望系统能提供哪些分析功能?
+业务人员希望以何种方式来看这些指标?
+业务人员希望对这些指标进行哪些方面的比较?
+......
+
+（数仓可以为哪些业务模块用；数仓应该提供哪些便利功能； 自己业务所关心的核心指标有哪些； 指标的价值和使用形式；基于数仓现有的数据设计新产品等）
+
+
+
+**4）角度四：IT技术人员**
+此主题所需要的数据源都取自哪些业务系统?
+与本主题有关的现有的业务系统的数据结构怎样?
+IT人员对数据仓库的期望是什么?
+IT人员在平时的工作中最关心的哪些指标?
+......
+
+（技术组件和架构；和业务系统的对接和交互；数据结构、数据模型和开发规范等；关心的核心指标有哪些；数据量和实时性、链路关系等）
+
+
+
+##### 1.1.1.2.2. 逻辑分析
+
+###### **1） 处理逻辑分析**
+
+单一主题处理逻辑分析：从业务逻辑入手，分析各指标的组成关系。（拆分单一的业务过程，分析相关指标和维度）
+多主题处理逻辑分析：综合考虑分析主题之间的逻辑关系。（根据业务主题，将多个业务线的业务过程联合建立，全面分析涉及指标和维度）
+
+
+
+###### 2） 支撑数据分析
+
+单一主题支撑数据分析：单个主题分析所需要的原始支撑数据分析
+多主题支撑数据分析：所有主题统一考虑做需要的支撑数据分析
+
+
+
+###### 3） 业务元数据建立
+
+使用者的业务术语所表达的数据模型、对象名和属性名; （元数据管理系统，包含统一业务语义、业务术语、指标描述词明确无二义）
+访问数据的原则和数据来源; （数据源元数据管理； 数据服务使用规范化）
+系统所提供的分析方法及公式、报表信息。
+
+
+
+##### 1.1.1.2.3. 数仓建模
+
+**业务建模**
+数据建模
+逻辑结构（完成实体的定义，各实体间的关系等）
+存储粒度（与源系统基本保持一致）
+存储周期（立即删除、过一段时间删除或者是备份到其它介质上）
+
+**物理建模开发**
+数据的存储结构
+索引策略
+数据存放位置（硬盘或磁带等）
+存储分配
+分区设计
+
+
+
+##### 1.1.1.2.4 数据源分析
+
+**数据源范围**：
+包括数据源逻辑范围和物理范围。 数据来源是业务数据库，还是文件系统，决定数仓采集的网络、权限、安全加解密等情况。
+
+
+
+**数据源格式**
+包括业务库数据、文件数据、埋点数据等。
+
+
+
+**数据更新频率**
+数据创建时间、更新时间字段等，决定数据采集入仓时的准确性，是否存在丢数少数情况。
+
+
+
+**数据量**
+决定数据抽取是全量采集、增量采集；采集周期是每天一次、每周一次、每月一次等情况。
+
+
+
+**数据质量**
+决定数据抽取时空值、null值、异常值、金额单位、枚举值业务含义、小数精度等数据结构、数据值的情况。
+
+
+
+##### 1.1.1.2.5. 数据获取和整合
+
+**1）直接抽取：主要面向 业务数据库 （ogg canal datax等）**
+ETL服务器直接连接到应用系统后台数据库中，直接抽取所需数据。
+采用这种抽取方式时，必须注意安全控制和抽取时间窗口两个问题。
+
+**2）Web服务和数据收集工具：主要面向 网络流数据 （接口，消息中间件）**
+通过WEB服务获取系统需要的数据的抽取方式。
+
+**3）文件收集：主要面向日志文件（ftp filebeat flume等）**
+文件交换是指应用系统将需要抽取的业务数据保存为有格式的文本文件，然后ETL服务器通过读此文件内容来
+获取业务数据的数据抽取方式。
+
+**4）数据的整合：数据的 ETL：抽取，转换，装载 （在ODS层做ETL相关清洗处理）**
+字段映射
+代码转换
+字段拆分
+字段合并
+字段运算
+字段补充
+行列转换
+全部覆盖
+记录追加
+记录更新
+
+......
+
+##### 1.1.1.2.6  应用分析
+
+**1) 分析方法**
+OLAP有多种实现方法，根据存储数据的方式不同可以分为ROLAP、MOLAP、HOLAP
+
+**2) 预定义报表**
+1、对单报表可以直接从数据库中取出数据进行分析展现。
+2、同一主题的多个报表间有较强的关联，有些数据会在多个报表中以不同方式出现。因此，可以对多个报表进行整合。
+
+**3) 即席查询**
+1、基于单个表的即席查询
+2、基于多个事实表关联的即席查询
+
+**4) 数据挖掘**
+根据数据功能的类型和和数据的特点选择相应的算法，在净化和转换过的数据集上进行数据挖掘。
+
+##### 1.1.1.2.7. 数据展现
+
+**文案、 报表 、图表**
+
+主要数据展现格式：文字不如表，表不如图，但是不能直接干掉表的存在
+
+最佳形式：提供自定义指标选择和条件筛查并且能下载报表明细数据的统一规范化可视化web平台。 echarts
+
+
+
+------
+
+
+
+#### 1.1.1.3 数仓架构
 
 **1）Lambda架构**
 
@@ -207,16 +388,10 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 2、在实时数据处理时，遇到大量不同的实时流进行关联时，非常依赖实时计算系统的能力，很可能因为数据流先后顺序问题，导致数据丢失。
 
-
-
-
-
 |        | 优点                                                         | 缺点                                                     |
 | ------ | ------------------------------------------------------------ | -------------------------------------------------------- |
 | Lambda | 1、架构简单2、很好的结合了离线批处理和实时流处理的优点4、稳定且实时计算成本可控5、离线数据易于订正 | 1、实时、离线数据很难保持一致结果2、需要维护两套系统     |
 | Kappa  | 1、只需要维护实时处理模块2、可以通过消息重放3、无需离线实时数据合并 | 1、强依赖消息中间件缓存能力2、实时数据处理时存在丢失数据 |
-
-
 
 
 
@@ -240,7 +415,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 
 
-####  1.业务建模
+####  1.1.2.1.业务建模
 
 采用过程分析法，将整个业务过程涉及的每个环节一一列清楚，包括技术、数据、系统环境等。
 
@@ -262,7 +437,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 
 
-#### 2.数据建模（维度建模）
+#### 1.1.2.2.数据建模（维度建模）
 
 一般使用下面的过程维度建模：
 
@@ -284,7 +459,7 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 
 
-#### 3.物理建模
+#### 1.1.2.3.物理建模
 
 建模/开发工具： 数据建模工具。
 
@@ -300,6 +475,79 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 
 
+### 1.1.4 维度表设计
+
+#### 1.1.4.1、维度表设计原则：
+
+**原则1：**每个维表必须有而且只有一个最明细层作为该维表的颗粒度。
+**原则2：**任何一个维表若被多个事实表使用，尽量沉淀出通用的维度属性，这些属性作为公共维表属性来设计公共维表。
+**原则3：**除非出于性能考虑，否则每一个非键属性应只出现在一张维表里。
+**原则4**：尽可能生成丰富的维度属性，尽可能多地给出包括一些富有意义的文字性描述
+**原则5：**维表应尽量保存业务使用的代码和 ID ，以及描述信息。
+**原则6：**维表的主键（代理键）应做为事实表的外键包含在事实表内。
+**原则7：**每个维表中要有相应的行记录来处理特殊的情形来避免在事实表中置空值。如记录不存在，以及迟到的维记录。
+**原则8：**通常情况下，一个维度模型，不应该携带很多的维度，否则会增加查询的负担，响应性能，个位数最佳
+
+**原则9：**需要记录属性变化的维的主键应该是使用代理键，并使用具有业务含义，业务用户可识别的代码作为自然键。业务系统自带的代理键不能做为维表的主键。
+
+#### 1.1.4.2、维度表设计方法
+
+**1）选择维度或者新建维度：**在企业级数据仓库中，必须保证维度的唯一性
+
+**2）确定主维表：**一般是ODS层表，直接从业务库同步
+
+**3）确定相关维表：**根据对业务的梳理；确定哪些表和主维表存在关联关系，并选择其中的某些表用于生成 维度属性。
+
+**4）确定维度属性：**
+
+阶段一： 从主维表 中选择维度属性或生成新的维度属性；
+
+阶段二： 从相关维表中选择维度属性或生成新的维度属性
+
+#### 1.1.4.3、要求
+
+a、维度表谨记一条原则，包含单一主键列：如果维表主键不是单一，和事实表关联时会出现数据发散，导致最后结果可能出现错误
+
+b、尽可能生成丰富的维度属性：维度表通常比较宽，包含大量的低粒度的文本属性
+
+c、尽可能多地给出包括一些富有意义的文字性描述
+
+d、区分数值型维度属性和事实表的度量值
+
+e、尽量沉淀出通用的维度属性
+
+------
+
+
+
+### 1.1.5 事实表设计
+
+#### 1.1.5.1、事实表设计原则
+
+**原则1:** 尽可能包含所有与业务过程相关的事实。事实表设计的目的是为了度量业务过程，事实越多，越有利于多角度多维度度量业务
+**原则2:** 只选择与业务过程相关的事实。比如下单事件，不应该存储支付金额
+**原则3:** 分解不可加性事实为可加的组件。比如订单的优惠率，应该分解为订单的原价与订单优惠金额两个事实存储在事实表中
+**原则4:** 在选择维度和事实之前必须先声明粒度。粒度是维度的组合。先确定粒度，再确定维度。粒度用于确定事实表中一行所表示业务的细节层次，决定了维度模型的扩展性，在选择维度和事实之前必须先
+声明粒度，且每个维度和事实必须与所定义的粒度保持一致。
+**原则5:** 在同一个事实表中不能有多种不同粒度的事实。事实表中的所有事实需要与表定义的粒度保持一致，在同一个事实表中不能有多种不同粒度的事实。
+**原则6:** 事实的单位要保持一致，对于同一个事实表中事实的单位应该保持一致。比如订单的金额、订单优化金额、订单运费金额这三个事实，应该采用一致的计量单位，统一为元或者分，方便实用。
+**原则7:** 对事实的 null值要处理。对于事实表中事实度量为null 值的处理，因为在数据库中null 值对常用数字型字段的sql过滤条件都不生效，比如大于，小于，等于…，建议用零值填充。
+**原则8:** 使用退化维度提高事实表的易用性。这样设计的主要目的是为了减少下游用户使用时关联多个表进行操作。直接通过退化维度实现事实表的操作。通过增加存储的冗余，提高计算的速度。空间置换时间的方式
+
+
+
+#### 1.1.5.2、事实表类型
+
+**1） 事务事实表：**也称原子事实表，描述业务过程，跟踪控件或时间上某点的度量事件，保存的是最原子的数据；
+
+**2） 周期快照事实表：**以一个周期为时间间隔，来记录事实，一般周期可以是每天、每周、每月、每年等；
+
+**3）累积快照事实：**用来描述过程开始和结束之间的关键步骤事件，覆盖过程的整个生命周期，通常具有多个日期字段来记录关键时间点；当过程随着生命周期不断变化时，记录也会随着过程的变化而被修改；
+
+------
+
+
+
 ## 1.2 数仓建设规范
 
 ------
@@ -308,17 +556,17 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 ### 1.2.1 数据分域
 
-------
+数据域、业务域这些名词，最好由数据治理平台管理，由相关人员建立、审批，各个业务部门、数据部门统一口径使用。
+
+相应的名词管理还有： 业务描述词、业务指标、时间修饰词等一系列规范性的名词，避免跨部门数据使用时的歧义和理解不同，导致数据排查、指标不准等问题。
 
 
 
-#### 1.1.数据域关系图
+#### 1.2.1.1.数据域关系图
 
 待补充（市面上有相关模型）
 
-
-
-#### **1.2. 企业总线架构矩阵图**
+#####  企业总线架构矩阵图
 
 （结合企业已有业务线）
 
@@ -328,9 +576,9 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 
 
-#### 2.数据域划分
+#### 1.2.1.2.数据域划分
 
-
+（行业有相关的业务模型，都是比较成熟的数据域划分案例，比如：金融保险行业的FSDM数据模型、BDWM金融主题模型等）数据域划分，一般由架构师基于本公司或者集团的业务架构规范等制定的，具体细节可以查看相关数据和行业案例，这里只做列举，不做详细说明解释。
 
 1. **客户域（Customer）**
    编码缩写： **CUS**
@@ -399,52 +647,61 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
     
     
 
-------
 
 
+#### 1.2.1.3.业务域划分
 
-#### 3.业务域划分
+业务域划分依据公司具体业务线，可以作为集市层DM的主题域标识等。
 
-***业务域名称缩写：***
+***业务域名称以及缩写：***
 
-1. 
+1. **信贷（  Credit）**
+   编码缩写：**CRD**
+   描述说明： 
+
    
 
-业务域命名来源参考：
+2.  **支付（  Pay）**
+
+   编码缩写：**PAY**
+   描述说明： 
+
+3.  **公共（  Public）**
+
+   编码缩写：**PUB**
+   描述说明： 
+
+   
+
+4.  **权益域（ Equity）**
+
+   编码缩写：EQT
+
+   描述说明：
+
+
 
  
-
-
 
 ------
 
 ### 1.2.2 数仓分层
 
-
-
 ------
 
-#### 1） 架构图
+#### 1.2.2.1 架构图
 
 ODS层(在这里叫的src)
 
 ![](../../blogImg/img/1.2.21.png)
 
-
-
 ##### 技术架构
-
-（示例： ）
 
 ![](../../blogImg/img/1.2.2.1.png)
 
 
 
-------
-
-
-
-#### 2）说明
+#### 1.2.2.2 说明
 
 - **数据流向**
   1）稳定业务：ODS → DWD→DWS → DWA
@@ -509,48 +766,33 @@ ODS层(在这里叫的src)
 
   
 
-- BK备份层
-  **数据接入范围：**          数仓各层数据
-  **数据粒度**：         无
-  **建模方法**：       无
-  **数据保留时间**：     长期保留，只保留最近三个版本数据
-  **其他**：
-
-  
-
 - 
 
 ------
 
-### 1.2.3 分层表命名规范
+### 1.2.3 分层建设规范
 
-**1）通用命名格式：**
+#### **1）通用命名格式：**
 
-​       数仓分层名_数据域_业务域_T_表名_[ 同步周期/统计周期 ]
+​       数仓分层名\_数据域\_业务域\_T\_表名\_[ 同步周期/统计周期 ]
 
+**【数据域名】：**  参考数据分域中，对应数据域的编码缩写
 
+**【业务域名】：** 参考数据分域中，对应业务域的编码缩写
 
-数据域名：  参考数据分域中，对应数据域的编码缩写
+**【采集/同步/统计周期】：**  数字 + 周期描述词 
 
-业务域名： 参考数据分域中，对应业务域的编码缩写
+​      描述词： **年 \_Y**。 如： 3年，_3Y
 
+​                      **季 _Q**
 
-
-同步/统计周期：  数字 + 周期描述词 
-
-​      描述词： 年 _Y。 如： 3年，_3Y
-
-​                      季 _Q
-
-​                      月 _M
+​                      **月 _M**
 
 ​                      **周 _W**
 
 ​                      **日 _D**
 
 ​                      **时 _H**
-
-
 
 **2） 通用规范：**
 
@@ -560,97 +802,313 @@ ODS层(在这里叫的src)
 
    
 
-   
 
 ------
 
-#### 1）分层命名说明
+#### 1.2.3.1 各层建设规范说明
 
-**SRC层**
+SRC层、ODS层表命名中的 “业务系统名”统一按照**系统简称**命名，不细化到子系统简称。
 
-表命名格式： SRC_业务系统名_T_业务表名_同步周期
+如果系统下多个子系统表入仓，且存在同名的，命名格式如下： **数仓分层名\_业务系统名\_[分层名]\_T[1-9]\_原业务表名**，以便区分。
 
-举例： 
+无多子系统表名重复的情况，则按原规范加工，用“T”分割。T1代表同一个系统下，有一张重名的表，以此类推。
 
-​      用户信息表 举例： SRC_ISIM_T_USERINFO_1D
+------------------------------------------------------------------------------------------------
 
+##### **SRC层**
 
+**表命名格式：** SRC\_业务系统名\_T\_业务表名\_[采集周期]
 
- **DIM维表层**
+举例：    用户信息表 举例： SRC_ISIM_T_USERINFO_1D
 
-表命名格式： DIM_数据域_业务域_T_维度关键词
+**1） 采集方式**
 
-举例：
+mysql 数据，统一通过CDC机制实时采集；
 
-​     全网客户信息表  DIM_CUS_ISIM_T_AL_CUSTOMER 
+oracle数据，未申请ogg方案之前，通过datax等工具T+1离线同步入仓； 申请ogg通过后，改造为CDC实时同步采集方案；
 
+埋点数据，通过flink程序由埋点kafka，实时采集；
 
+excel、sftp等文件数据， 原则上根据文件版本手工录入，有新数据文件产生即录入。
 
-**DWD明细数据层**
+其他入仓数据，视情况确定具体方案，再做补充。
 
-表命名格式：DWD_数据域_业务域_T_事实关键词_同步周期
+**2）数据处理**   保持原始数据全貌，不做过多处理。
 
-举例：
+**3）保留时长**   默认保存60天数据
 
-​     CBSS语音详单表(日)  DWD_EVT_ISIM_T_CB_VOICE_1D  
+**【注意事项】**：
 
-
-
- **DWS层**
-
-表命名格式：DWS_数据域_业务域_T_关键词_统计周期
-
-举例：
-
-​     3日用户留存表 DWS_CUS_ISIM_T_AL_SAVE_3D  
+​    a） **业务库源表，原则上不建议采集视图表**。 视图存在不确定因素，如果视图逻辑复杂、依赖层级较多，会导致数仓在数据同步时发生错误。 排查问题还需要联合业务部门、DBA多方一起定位。如果视图表数据重要，需分析原有视图逻辑，采集原表数据入仓，在数仓根据原逻辑构建 类似宽表。
 
 
 
- **DWA层**
+------------------------------------------------------------------------------------------------
 
-表命名格式：DWA_数据域_业务域_T_关键词_统计周期
+##### **ODS层**  
 
-举例：
+ODS是一个面向主题的、集成的、可变的、当前的细节数据集合，用于支持企业对于即时性的、操作性的、集成的全体信息的需求。常常被作为数据仓库的过渡，也是数据仓库项目的可选项之一。
 
-​     采购SKU粒度汇总表 DWA_EVT_ISIM_T_SKU_SHOP_7D
+**表命名格式：** ODS\_业务系统名\_S\_T\_业务表名\_[存储规则标志]\_1D
 
+- 1. **存储规则标志说明：【标志名：解释说明】**
 
+     1. **all**： 无分区当前状态全量表;
 
-**DM层**
+     2. **all**： 分区当前状态全量表 ;
 
-表命名格式：DM_业务域_集市描述关键词_统计周期
+     3. **all**： 分区分桶当前状态全量表;
 
-举例：
+     4. **scd(slowly Changing Dimensions)**： 单分区拉链表;
 
-​     助贷风控特征离线表 DM_DTCCS_T_RISK_CONTROLLER_OFFLINE_1D
+     5. **scd(slowly Changing Dimensions)**： 无分区拉链表;
 
+     6. **ss(snapshot)**： 分区快照表;
 
+     7. **scd(slowly Changing Dimensions)**： 多分区拉链表;
 
-**BK备份层**
+        
 
-表命名格式：BK_备份表表名_日期
+        **(稍后附带ODS_s层各种表的加工sql逻辑框架 ）**
 
-举例：
+        
 
-​     BK_DWS_[详细表名]_20210329
+**1）加工**  
 
+直接通过SRC层数据直接加工获得，加工方式为增量加工，如下图所示：
 
+![](../../blogImg/images/202302011451.png)
 
-**其他表名**
+**2）数据处理**
 
-- 临时表 TMP_ ： 表名：TMP_分层名_[ to_分层名 ]_T_表标识_[ 时间  ]
+简单的数据处理：统一标准化、 字段命令规范、字段类型转换统一、异常值处理、数据去重、码值退化等。
+
+- **字段命名规范：( ODS不做处理 ，以原业务字段为主)**
+  *字段命令统一小写，以下划线分隔；*
+  *缩写、表达不清晰的字段，改写为通用统一的字段名；*
+  *如果接入数据治理工具后，数据标准库中有的，统一按照数据标准命名。*
+
+- ***字段去留筛选：***
+   没有意义的字段进行删除，删除字段还是要谨慎，要探查分析清楚确实属于废弃字段，避免后期修改ODS层表结构。
+   与业务人员沟通，仍然不确定的，ODS建议先入仓。
+
+- **字段类型统一：**
+  **金额：** 金额统一格式decimal（20，2），默认值 0.00，单位：分，空值转换为默认值
+              整型数量值统一格式bigint, 默认值：0，空值转为换默认值；
+              费率比率统一格式decimal（_, _），小数位数**参考业务表位数**确定。业务不明确的统一decimal（10,4）。
+
+  **时间：** 日期时间类型格式**统一转换为string类型**，不能损失源表时间精度。
+              能精确到秒的，yyyy-MM-dd HH:mm:ss
+              能精确到分的，yyyy-MM-dd HH:mm
+              能精确到时的，yyyy-MM-dd HH
+              能精确到天的，yyyy-MM-dd
+              以此类推；
+
+- **数据值转换处理**：
+         判断（是否类型）类字段转换：代表是否值为0|1,y|n,T|F等等的，统一转为Y/N，字段名建议以 ”is_“ 开头；
 
   
 
-- 视图表 VIEW_ ： 表名：VIEW_分层名_数据域_业务域_T_关键词_[ 周期 ]
+- **数据值脱敏加密**：
+         数据需要加密脱敏的，或者密文转换数仓统一加密的，均在SRC层做了处理，ODS层表取SRC层即可。**( 该项，ODS不做处理）**
+            
+
+- **异常值处理：**
+        **空值、null值：** 源表空值（NULL)处理：ods层建表时**重要字段**全部设置为非空，默认值**按照业务含义**要求设计。重要字段，要根据经验去判断 .  **难以确定**默认值设计的情况下，String类型字段可以统一设置默认值""（空字符串）；
+        **错误值：** int类型字段中，如果有String这种错误值。无法处理的，剔除该行数据；可以处理的，转换为默认值；优先按默认值处理。**( 该项，ODS不做处理）**
+        **逻辑异常值：** 如用户年龄字段出现300的数值这种，不影响程序处理，但会影响指标计算。 这类数据按默认值处理也会影响指标统计，根据实际情况处理。 **( 该项，ODS不做处理）**
+        
+- **码值退化：**
+      分两类：  1.原业务表中的枚举值，无独立码表；  2.有独立码表，关联码表的码值。
+      需要探查清楚源表所有码值，不允许为空，所有码值必须有对应码名称（中文或英文描述），并将中文含义退化进表字段。
+      业务表数据库设计一般遵循范式建模，将码值和中文含义拆开建表。需求统计时需要合并到宽表中展示，可以在ODS层将码表退化到原业务表，**增加中文描述列**。
+
+**3）场景和分区处理方式**
+
+ODS_S层表存储在Hive中。不同场景的表，命名对应不同的**存储规则标志**。
+
+**场景1.业务表只有insert，无修改和删除的场景**
+
+不做特殊处理，直接清洗追加。ODS_S可以按天分区，该层表数据条数跟SRC其实是一致的，只是在列上做些ODS的清洗加工。
+
+**场景2.业务表有新增，也存在update操作场景**
+
+根据当前总数据以及每月增量数据数量进行灵活判断
+
+  参考方案：
+（1）总数据1000万（含）以下月并且增量100万以下；
+
+​             **单分区表**直接处理成最新全量数据
+
+（2）总数据量大于1000万小于1个亿并且月增规模小于1000万 ；
+
+​            **按照业务时间分区**
+
+（3）总数据量大于1个亿月增量数据规模大于1000万 ；
+
+​           **按照业务时间分区**，按业务流水编号**分桶**。
+
+
+
+**4）生命周期管理**
+
+  如一直有使用，则长久保存；如果复用性不高或者不再使用，及时改造下线。
+
+**5）该层建设思路和流程**
+
+1. 数据探查，了解原业务表中，数据分布、数据量、更新变化、业务场景等基本信息；
+
+2. 针对该表的基本信息情况，结合**步骤3）**中的场景，设计适合的分区存储方式、加工方式；
+
+3. 完成文档设计；利用自动化工具生成ODS_S层sql脚本文件；
+
+4. 在SRC层入仓后开发ODS_S层任务，并配置调度上线；
+
+5. 根据需求，为运清同事开通ODS_S层表权限；数仓上层统计使用的需求；
+
+   
+
+--------------------------------------
+
+
+
+#####  **DIM维表层**
+
+表命名格式： DIM\_数据域\_业务域\_T\_维度关键词
+
+举例：     全网客户信息表  DIM_CUS_ISIM_T_AL_CUSTOMER 
+
+-------------------------
+
+
+
+##### **DWD明细数据层**
+
+表命名格式：DWD\_数据域\_业务域\_T\_事实关键词\_同步周期
+
+举例：     CBSS语音详单表(日)  DWD_EVT_ISIM_T_CB_VOICE_1D  
+
+----------------------------
+
+#####  **DWS层**
+
+表命名格式：DWS\_数据域\_业务域\_T\_关键词\_统计周期
+
+举例：     3日用户留存表 DWS_CUS_ISIM_T_AL_SAVE_3D  
+
+
+
+---------------------------------
+
+#####  **DWA层**
+
+表命名格式：DWA\_数据域\_业务域\_T\_关键词\_统计周期
+
+举例：     采购SKU粒度汇总表 DWA_EVT_ISIM_T_SKU_SHOP_7D
+
+---------------------------------------
+
+
+
+##### **DM层**
+
+**1) 表命名格式：**  **DM\_主题域_数据分类\_T\_[交换需求标识]\_集市描述关键词\_统计周期**
+
+举例：     助贷风控特征离线表 DM_DTCCS_T_RISK_CONTROLLER_OFFLINE_1D
+
+**【主题域】：**
+
+1.公共数据层（Public）
+
+ 编码缩写：PUB   
+
+SCHEME:**DM_PUB**
+
+  描述说明：基础数仓的数据映射到此数据层，可对外开放，以DWD，DWS为主，视情况可以添加SRC层数据；
+
+2.信贷风险集市（ Credit Risk   ）
+
+   编码缩写：CR   
+
+SCHEME:**DM_CR**
+
+   描述说明：与信贷相关的风险决策及运营数据集市；
+
+3.营销分析集市（Marketing Analysis ）
+
+  编码缩写： MA   
+
+SCHEME:**DM_MA**
+
+  描述说明：支撑营销相关场景的数据集市；
+
+4.经分BI集市（ Business Intelligence）
+
+  编码缩写：BI   
+
+SCHEME:**DM_BI**
+
+  描述说明：支撑经营分析、决策的数据集市；
+
+5.安全合规集市（Safety Compliance ）
+
+   编码缩写：SC  
+
+SCHEME:**DM_SC**
+
+   描述说明：支撑安全、风控、合规分析的数据集市；
+
+6. 科学探索集市 （Scientific Exploration）
+
+   编码缩写：SE  
+
+ SCHEME:**DM_SE**
+
+   描述说明：支撑数据建模，科学探索的数据集市；
+
+ **【数据分类】**： D:明细；S:轻度汇总（简单的维度汇总）；A：汇总（多表的复杂逻辑汇总）；
+
+**【交换需求标识（可选）】**：DX：交换任务；  
+
+ 举例：经分BI集市金融网关支付轻度汇总表 DM_BI_S_T_UFAF_PAY
+
+**2) 加工方式**
+
+目前均为离线加工，存储组件为Hive，统计周期由具体的任务调度可知，任务调度在dolphinscheduler上。
+
+**3) 加工规范**
+
+1、DM模型表必须包含两个字段： **dw_entry_time-数据加工时间**， **data_dt-数据日期（字段名-中文名）** 。  数据日期字段的目的： 这个业务时间，和我们调度参数应该是一样的，留作记录，方便日后问题排查（根据具体DM报表需求，确定具体日期格式：yyyy-MM-dd、yyyy-MM、 yyyy）。
+
+2、字段英文名统一数据标准
+
+3、字段中文名统一业务术语
+
+
+
+-------------------------------------------------------------
+
+
+
+##### **BK备份层**
+
+表命名格式：BK\_备份表表名\_日期
+
+举例：     BK_DWS\_[详细表名]\_20210329
+
+
+
+##### **其他表名**
+
+- 临时表 TMP_ ： 表名：TMP\_分层名\_[ to_分层名 ]\_T\_表标识\_[ 时间  ]
+
+- 视图表 VIEW_ ： 表名：VIEW\_分层名\_数据域\_业务域\_T\_关键词\_[ 周期 ]
+
+- kafka在hive中的外部表： **跟hive表命名规范保持一致，在此基础上加上KFK_前缀，以作区分**
+
+  表名：KFK_[HIVE表命名]
 
   
-
-- 拉链表 ZT_ ： 表名：ZT_分层名_T_表标识_[ 时间日期 ]
-
-  
-
-- 码表 MA_ ： 表名：MA_数据域_T_码表描述关键词
 
 
 
@@ -662,40 +1120,55 @@ ODS层(在这里叫的src)
 
 
 
-------
+#### 1.2.4.1  数据入仓准则
 
-#### 1) 数据需求梳理
+**1）目的**
+数据仓库入仓时，数据来源多源性、数据质量复杂多样、数据可用性高低不齐等问题，涉及数据仓库稳定、数据安全生产、数据复用价值等多个方面。为保证建设健全的数据仓库，需设立较为清晰明确的数据入仓准则。该准则主要明确以下几点：
 
-输出结果： 可行的业务需求文档，明确不存在歧义和模糊边界的需求，对后期数据开发有一定指导意义。
+1）什么样的数据可以入仓？哪些不应该入仓？数据能形成数据资产，体现数据价值；
+
+2）数据如何规范、高效、安全地落到数仓，对数据有哪些基本要求；
+
+3）不规范的地方，如何调整；
+
+**2）要求**
+**2.1、需得到数据所有者授权；**
+【说明】 入仓时，该数据来源表、sftp文件、csv文件等数据生产部门需知悉授权。
+
+涉及DBA和数据安全的敏感数据，还须提交工单到相关部门申请相应权限。
+
+**2.2、数据源需稳定，长期存续，一般不支持一次性需求**；
+【说明】数据需周期性，长期稳定地采集入仓，保证数据生成源的稳定；支撑单次需求的数据、复用性价值低的不建议入仓；不接受文件数据，不方便维护，且容易出错。
+
+特例情况处理：
+
+1）手工维护的编码表、csv文件等，在数据需求提出方的数据库里维护该份数据的表，数仓直接抽取该表。
+
+2）集团或其他部门文件数据，存放到sftp目录上。
+
+**2.3、数据源需有创建时间，更新时间含义字段，且维护准确；**
+【说明】数据入仓时，每条数据需要有创建时间、更新时间含义的字段，为时间类型或时间格式字符串，记录该条数据什么时候产生、什么时候变化。
+
+创建时间、更新时间两列数值不应该存在空值、null值、无意义值等异常情况。
+
+**2.4、数据源如有删除操作，需进行逻辑删除，不支持物理删除；**
+【说明】数据库表不应该有delete操作；
+
+**2.5、如有历史数据迁移分表的，在主表数据入仓时，历史数据表需一起入仓。**
 
 
 
-如果本期需求为业务明细数据，需求文档落实到具体业务表的取数逻辑；示例如下：
+#### 1.2.4.2业务库表梳理
+
+本阶段输出结果：跟业务系统人员沟通梳理，**以实际生产环境的业务库表为标准，** 整理出各个业务表相关文档。
+
+通过**数据治理平台**，统一数据模型管理，管理业务库表的字典结构，样例数据等。需要明确的地方有：字段名、字段类型、字段值情况（空值null值、异常值、时间格式、默认值等等）、涉密敏感字段情况、大文本类型字段等。
 
 
 
-如果本次需求为统计指标相关，需要按照运营清算部已有的指标体系规范，拆解成 “时间周期 + 维度属性 + 根指标”这种明确的需求。示例如下：
 
 
-
-
-
-------
-
-
-
-#### 2）业务库表梳理
-
-
-本阶段输出结果：跟业务系统人员沟通梳理，**以实际生产环境的业务库表为标准，** 整理出各个业务表相关文档。具体举例如下：
-
-
-
-------
-
-
-
-#### 3）业务数据抽取依据的时间字段
+#### 1.2.4.3 抽取依据的时间字段
 
 本阶段输出结果：
 
@@ -717,9 +1190,21 @@ ODS层(在这里叫的src)
 
 
 
-#### 4）数据脱敏相关梳理
+#### 1.2.4.4 数据脱敏相关梳理
 
 涉及到敏感类数据，梳理过程中需要确认数据明文密文情况、加密算法等问题。
+**SM3** 密码杂凑算法，即消息摘要。可以用MD5作为对比理解。该算法已公开。校验结果为256位。
+**SM4** 无线局域网标准的分组数据算法。对称加密，密钥长度和分组长度均为128位。
+
+ 需要加密的字段（入仓统一使用国密算法）
+除手机号外,其它都GMSM3不可逆
+1.手机号（GMSM4，可逆）
+2.身份证号（GMSM3，不可逆）
+3.银行卡号（GMSM3，不可逆）
+业务系统已加密，在建模梳理字段信息时需明确加密的字段和业务系统使用的加密算法，解密后使用国密进行加密后入仓；
+业务系统未加密，处理时直接加密即可； 
+
+数仓开发相关的UDF加密函数，并在采集程序的时候使用，即：在数据入仓的第一层SRC即做了加密处理，保证数仓环节不存在数据泄露风险。
 
 
 
@@ -729,13 +1214,19 @@ ODS层(在这里叫的src)
 
 ### 1.2.5 数据建模规范
 
-无
+数据建模一般结合数据治理工具和平台，制定数仓的的**数据标准**。这里记录一些通用的数据标准字段。
 
-------
+| 字段名称             | 中文名称     | 字段类型 | 备注说明                                                     |
+| -------------------- | ------------ | -------- | ------------------------------------------------------------ |
+| create_time          | 创建时间     | String   | 格式：yyyy-MM-dd HH:mm:ss。原数据只能到天的，格式为'yyyy-MM-dd。不损失原数据精度的前提下，统一处理为字符串类型 |
+| update_time          | 修改时间     | String   | 格式：yyyy-MM-dd HH:mm:ss。原数据只能到天的，格式为'yyyy-MM-dd。不损失原数据精度的前提下，统一处理为字符串类型 |
+| dw_entry_time        | 入仓时间     | String   | 格式：yyyy-MM-dd HH:mm:ss                                    |
+| business_db_operator | 数据操作标识 | String   | 包含值：I新增、U 修改、D删除、VI校验新增、VU校验修改、VD校验删除。 |
+| data_dt              | 数据日期     | String   | 一般指任务的调度日期， yyyy-MM-dd                            |
+|                      |              |          |                                                              |
+|                      |              |          |                                                              |
 
-#### 数仓的数据标准
-
-
+#### 
 
 
 
@@ -743,11 +1234,7 @@ ODS层(在这里叫的src)
 
 
 
-------
-
-
-
-#### 基于hive的规范
+#### 1.2.6.1 hive的规范
 
 **约定：**
 
@@ -765,41 +1252,85 @@ ODS层(在这里叫的src)
 
   
 
-**分区：**
+**1）分区：**
 
-**1）按时间分区**
+**按时间分区**
 
-- 默认采用月份（YYYYMM）分区作为一级分区，对于日模型表（DD）增加二级分区；
+- 年分区，分区键：yt，格式： YYYY 
+- 月分区，分区键：nt，格式： YYYY-MM
+- 天分区，分区键：dt，格式： YYYY-MM-DD
+- 小时分区，分区键：ht，格式： HH（24小时制）
+- 分钟分区，分区键：mt，格式： mm
 
-- 年份分区，分期键：YEAR_ID，格式： yyyy
+**其他分区键**
 
-- 月份分区，分期键：MONTH_ID，格式： yyyymm
-
-- 日期分区，分期键：DT，格式： yyyymmdd
-
-- 日分区，分期键：DAY_ID，格式： dd
-
-- 小时份分区，分期键：HOUR_ID，格式： HH
-
-  
-
-**2）按地区分区**
+时间分区字段后，可根据实际情况增加业务分区等分区键，如省份、男女、是否某类人群等。
 
 
 
+**2）存储和压缩**
+
+hive存储；
+
+建表语句统一使用：
+
+**CREATE TABLE IF NOT EXISTS  xxx(**
 
 
-**存储和压缩**
+
+**)** comment ' '
+
+partitioned by (data_dt string）
+
+**row format delimited fields terminated by ','**
+
+**stored as parquet;**
 
 
 
-**sql脚本规范**
+**3）sql脚本规范**
+
+sql脚本统一添加注释头，**一次创建，多次变更； 变更逻辑时，新增变更版本记录，不要在之前的基础上修改。** 内容如下：
+
+-- #########################################################################
+-- # 需求提出部门：XX部-大白菜（人名）
+-- # 需求描述信息：xxxx营销报表/XX风控黑名单等
+-- # JIRA/需求编号：
+-- # 查询的表：
+-- # 
+-- # 创建人：
+-- # 创建时间：
+-- # 运行周期：日/周/月
+-- # 数据采集频率：5分钟/日增/全量
+-- # 上线日期：2022-07-05
+-- # 定时运行批次：am2/pm4/实时
+-- #
+-- # ------------------------------------------------------------------------
+-- # 变更版本记录
+-- # 
+-- # 维护人：  
+-- # 维护时间：
+-- # 维护说明：  
+-- #
+-- #########################################################################
+
+**统一文件存放**
+
+数仓各层建设过程产生的SQL文件、调度/校验/安装等脚本、代码等，统一存放在项目组gitLab的特定目录 ，并在相应的.md说明文档中写明功能、使用方式、注意事项等说明。
+
+**gitlab提交信息：**
+
+commit信息： add/modify  xxx（说明信息）。提交信息不能太过简洁随意，应大致说明本次提交覆盖哪些需求或者系统入仓。
 
 
 
-**调度脚本规范**
+**4） 调度脚本规范**
 
+数仓离线调度，使用组件为：DolpinScheduler。要求如下：
 
+1、“工作流名称”需要和表名保持一致。
+
+2、必须填写描述项，方便定位问题到个人。 格式：“上线人：xxx  功能：xxxxx”
 
 
 
