--- a/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
+++ b/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
@@ -443,11 +443,33 @@ Kafka或者其他消息中间件，具备保留多日数据的能力。正常情
 
 - **选择业务流程**：描述需要建模的业务流程。例如，需要了解和分析一个零售店的销售情况，那么与该零售店销售相关的所欲业务流程都是需要关注的。
 
+  业务过程是组织完成的操作型活动。例如注册用户、下订单，开具发票，付款、处理索赔等。
+
+  业务过程通常用**行为动词**表示。因为他们通常表示业务执行的活动。与之相关的维度描述与某个业务过程时间关联的描述环境。
+
+  业务过程通常由**某个操作系统**支撑，例如账单或购买系统。
+
+  业务过程**建立或获取关键性能度量**。有时这些度量事业务过程的直接结果，度量从其他时间获得。分析人员总是想通过过滤器和约束不同组合，来审查和评估这些度量。
+
+  业务过程通常由输入激活，产生输出度量。在许多组织中，包含一系列过程，他们即是某些过程的输出，也是某些过程的输入。即一系列过程产生一些列的事实表。
+
+  业务过程事件建立或获取性能度量，并转换为事实表中的事实。多数事实表关注某一业务过程的结果。过程的选择是非常重要的，因为过程定义了特定的设计目标以及对粒度，维度，事实的定义。每个业务过程对应企业数据仓库总线矩阵的一行。
+
 - **声明粒度**：声明维度模型的粒度，用于确定事实中表示的是什么，例如，一个零售店的顾客在购物小票上的一个购买条目。
+
+  先举个例子：对于用户来说，一个用户有一个身份证号，一个户籍地址，多个手机号，多张银行卡，那么与用户粒度相同的粒度属性有身份证粒度，户籍地址粒度，比用户粒度更细的粒度有手机号粒度，银行卡粒度，存在一对一的关系就是相同粒度。
+
+  为什么要提相同粒度呢，因为维度建模中要求我们，**在同一事实表中，必须具有相同的粒度**，同一事实表中不要混用多种不同的粒度，**不同的粒度数据建立不同的事实表**。并且从给定的业务过程获取数据时，强烈建议从关注原子粒度开始设计，也就是**从最细粒度开始**，因为原子粒度能够承受无法预期的用户查询。但是上卷汇总粒度对查询性能的提升很重要的，所以对于有明确需求的数据，我们建立针对需求的上卷汇总粒度，对需求不明朗的数据我们建立原子粒度。
 
 - **确认维度**：典型的维度都是名词，如日期、商店、库存等。维度表存储了某一维度的所有相关数据，例如，日期维度应该包含年、季度、月、周、日等数据。每个数据仓库中都应该有一个日期维度。
 
+  维度围绕某一业务过程事件所涉及的谁、什么、何处、何时、为什么、如何等背景。维度表包含BI应用所需要的用于过滤及分类事实的描述性属性。**牢牢掌握事实表的粒度，就能够将所有可能存在的维度区分开**。当与给定的事实表关联时，**任何情况都能保证维度表唯一值**。
+
 - **确认事实**：这一步是数字化的度量，构成事实表的记录。它是和系统的业务用户密切相关的，因为用户正是通过对事实表的访问获得数据仓库存储的数据。大部分事实表的度量都是数字类型的，可累加，可计算，如成本、数量、金额等。 
+
+  事实表是用来度量的，基本上都以数量值表示，事实表中的每行对应一个度量，每行中的数据是一个特定级别的细节数据，称为粒度。维度建模的核心原则之一是**同一事实表中的所有度量必须具有相同的粒度**。这样能确保不会出现重复计算度量的问题。有时候往往不能确定该列数据是事实属性还是维度属性。记住**最实用的事实就是数值类型和可加类事实**。所以可以通过分析该列是否是一种包含多个值并作为计算的参与者的度量，这种情况下该列往往是事实。
+
+  明显属于不同粒度的事实必须放在不同的事实表中。典型事实是可加性数值，例如订货数量是以美元计的成本总额等。
 
 
 
