--- a/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
+++ b/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
@@ -1905,7 +1905,9 @@ where id in (select process_definition_id from ts_bdt.t_ds_task_instance
 
 ### 1.4.1 基础知识
 
-[基础知识速记]: https://loujitao.github.io/%E4%BA%92%E8%81%94%E7%BD%91%E9%87%91%E8%9E%8D%E6%94%AF%E4%BB%98%E4%B8%9A%E5%8A%A1%E9%80%9A%E8%AF%86/	"基础知识速记"
+基础知识速记: https://loujitao.github.io/%E4%BA%92%E8%81%94%E7%BD%91%E9%87%91%E8%9E%8D%E6%94%AF%E4%BB%98%E4%B8%9A%E5%8A%A1%E9%80%9A%E8%AF%86/
+
+
 
 
 
