--- a/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
+++ b/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
@@ -1895,9 +1895,269 @@ where id in (select process_definition_id from ts_bdt.t_ds_task_instance
 
 ### 1.3.3 指标宽表和标签
 
+#### 1.3.3.1  用户画像和标签体系建设
+
+**一、用户画像简介**
+
+**1.1 概述**：
+
+用户画像，即用户信息标签化，通过收集用户的社会属性、消费习惯、偏好特征等各个维度的数据，进而对用户或者产品特征属性进行刻画，并对这些特征进行分析、统计，挖掘潜在价值信息，从而抽象出用户的信息全貌。用户画像可看作企业应用大数据的根基，是定向广告投放与个性化推荐的前置条件，为数据驱动运营奠定了基础。由此看来，如何从海量数据中挖掘出有价值的信息越发重要。
+
+画像是对业务实体多个维度特征的刻画和描述，是多个标签的集合。
+
+**1.2 应用场景**：
+
+用户画像最终的价值还是要落地运行，为业务带来实际价值。这里需要开发标签的数据工程师和需求方相互协作，将标签应用到业务中。否则开发完标签后，数据还是只停留在数据仓库中，没有为业务决策带来积极作用。
+
+画像开发过程中，还需要开发人员组织数据分析、运营、客服等团队的人员进行画像应用上的推广。对于数据分析人员来说，可能会关注用户画像开发了哪些表、哪些字段以及字段的口径定义；对运营、客服等业务人员来说，可能更关注用户标签定义的口径，如何在Web端使用画像产品进行分析、圈定用户进行定向营销，以及应用在业务上数据的准确性和及时性。
+
+只有业务人员在日常工作中真正应用画像数据、画像产品，才能更好地推动画像标签的迭代优化，带来流量提升和营收增长，产出业绩价值。
+
+**二、标签体系**
+
+**2.1 什么是标签**
+
+标签是对业务实体某个维度特征的刻画和描述，是一种面向业务的数据组织形式。例如，我们在大众点评上看到某家店是“必吃店”，这就是一种标签，又或者某部电影在豆瓣上的评分，这也是一种标签。
+
+提供信息：**标签的本质还是数据，数据的价值在于提供信息，进而提升决策的科学性和准确性**。企业的运营主要围绕业务对象和业务活动，所谓的精细化运营，无非是通过信息，来区分对待业务对象和业务活动，而标签可以很好地承载信息，是精细化运营的重要工具。
+
+面向业务：**标签是面向业务的一种数据组织形式**，可以让业务直接用起来，帮助业务从“看数据”变成“用数据”，真正意义上起到数据驱动业务。
+
+
+
+**2.2 标签类型**
+
+**① 统计类标签**
+
+这类标签是最为基础也最为常见的标签类型，例如，对于某个用户来说，其性别、年龄、城市、星座、近7日活跃时长、近7日活跃天数、近7日活跃次数等字段可以从用户注册数据、用户访问、消费数据中统计得出。该类标签构成了用户画像的基础。
+
+**② 规则类标签**
+
+该类标签基于用户行为及确定的规则产生。例如，对平台上“消费活跃”用户这一口径的定义为“近30天交易次数≥2”。在实际开发画像的过程中，由于运营人员对业务更为熟悉，而数据人员对数据的结构、分布、特征更为熟悉，因此规则类标签的规则由运营人员和数据人员共同协商确定；
+
+**③ 算法类标签** 
+
+该类标签通过机器学习挖掘产生，用于对用户的某些属性或某些行为进行预测判断。例如，根据一个用户的行为习惯判断该用户是男性还是女性、根据一个用户的消费习惯判断其对某商品的偏好程度。该类标签需要通过算法挖掘产生。
+
+在项目工程实践中，一般统计类和规则类的标签即可以满足应用需求，在开发中占有较大比例。机器学习挖掘类标签多用于预测场景，如判断用户性别、用户购买商品偏好、用户流失意向等。一般地，机器学习标签开发周期较长，开发成本较高，因此其开发所占比例较小。
+
+该项目不涉及此类。
+
+
+
+**2.3 标签体系建设**
+
+**2.3.1 自下而上**
+
+自下而上的标签体系建设方式分为产技主导和业务主导，产技主导主要负责标签体系冷启动的问题，业务主导主要负责标签体系的自增长
+
+**产技主导：**
+
+在标签体系从0-1的起步阶段，可能很多业务同学不清楚什么是标签，标签能用来做什么，对他的工作有什么帮助。那么这个时候可以由产技同学主导，选择1-2个核心场景切入，明确这个场景中的角色、流程、需求、痛点，思考在这个场景下如何通过标签去辅助业务，以及如何量化标签的价值、预估标签可以产生的价值。
+
+在和业务同学沟通确认后，推动这个场景落地。业务同学在有了实操体验后自然会对标签有一定的认识，会举一反三联想到其他哪些场景也能用到标签（这一步业务同学一定比产技同学反应快得多），进而逐步切入到其他场景，渐渐地从产技主导过渡到业务主导。
+
+案例：例如，在从0-1搭建供应商标签体系的时候，可以先主动调研供应商相关的核心业务场景，如供应商寻源，然后明确供应商寻源的具体业务规则，进而推导出哪些标签
+
+会有帮助，如“供应商评级”、“采购降本比例”等等标签，最后推动标签落地。
+
+**业务主导：**
+
+业务主导指业务方有某个具体的运营策略，需要由标签来辅助完成，这类标签的建设和落地会容易的很多。
+
+案例：例如，营销的同学要挽回高价值的流失人群，那么就需要有用户价值、用户流失概率等签，有了这些标签我们就能圈出这部分用户，再结合这部分用户的画像，就可以输出一些的营销策略。
+
+**2.3.2 自上而下**
+
+业务运转机制服务于商业目标，业务运转机制中两条主线就是业务流程和业务对象的生命周期，我们可以通过这两条线结合具体的商业目标和运营策略来自上而下构建标签体系。
+
+**按照业务流程拆解：**
+
+首先要明确企业的业务流程，例如零售企业的基本业务流程可以分为：设计研发-生产-营销-仓储-配送-售后，然后基于商业目标推导每个环节的运营策略。
+
+案例：例如，当我们要降低供应链成本的时候，对应到仓储环节就是要降低库存持有成本，然后我们会有一系列的运营策略来管理库存，比如销量的预测、库存的监控、动销情况等等。基于这些具体的策略我们可以推导需要哪些标签，比如在预测商品销量时，我们需要商品的季节标签、历史销量标签等等。
+
+**按照业务对象的生命周期拆解：**
+
+业务对象的生命周期和业务流程穿插在一起，且可以从多个维度去拆解。以用户为例，我们可以按照AARRR、AIPL等生命周期模型拆解。同样的，我们基于商业目标拆解到每个生命周期的具体运营策略，进而推导出需要哪些标签。
+
+案例：例如，对于流失期的用户，具体的运营策略是一系列的召回措施，那么就会用到用户最近一次购买时间、商品兴趣偏好、优惠圈敏感度等等标签。有了这些标签后，我们可以把运营策略做进一步的精细化，例如，有明显品类偏好的用户通过品类的上新/促销活动来召回，对优惠圈敏感度高的用户可以通过优惠券召回。
+
+
+
+**三、项目背景**
+
+第一、标签宽表生成时效低，现有的基础标签宽表中沃账户用户基本信息表、沃账户用户行为偏好信息表、沃账户用户交易信息表，有些表需要一到三小时不等；
+
+第二、计算压力大。
+
+
+
+**四、设计目标**
+
+第一、  用户画像相关脚本选用开源计算引擎处理；
+
+第二、  跑批时间减少两小时；
+
+第三、  按照标准维度建模的方式拆分中间表放到当前规范的数据层中；
+
+
+
+**五、模型设计**
+
+**1、数据架构**
+
+在整个工程化方案中，系统依赖的基础设施包括Spark、Hive、HBase、MySQL、Redis、Elasticsearch。除去基础设施外，系统主体还包括Spark Streaming、ETL、产品端3个重要组成部分。下图所示是用户画像数仓架构图，下面对其进行详细介绍。
+
+![img](../../blogImg/images/202309111607.png)
+
+下方虚线框中为常见的数据仓库ETL加工流程，也就是将每日的业务数据、日志数据、埋点数据等经过ETL过程，加工到数据仓库对应的ODS_MF层、ODS_SF层、、ODS_AF层、DM_MA层中。中间的虚线框即为用户画像建模的主要环节，用户画像不是产生数据的源头，而是对基于数据仓库ODS_MF层、ODS_SF层、、ODS_AF层中与用户相关数据的二次建模加工。在ETL过程中将用户标签计算结果写入Hive，由于不同数据库有不同的应用场景，后续需要进一步将数据同步到MySQL、HBase、Elasticsearch等数据库中。
+
+- Hive：存储用户标签计算结果、用户人群计算结果、用户特征库计算结果。
+- MySQL：存储标签元数据，监控相关数据，导出到业务系统的数据。
+- HBase：存储线上接口实时调用类数据。
+- Elasticsearch：支持海量数据的实时查询分析，用于存储用户人群计算、用户群透视分析所需的用户标签数据（由于用户人群计算、用户群透视分析的条件转化成的SQL语句多条件嵌套较为复杂，使用Impala执行也需花费大量时间）。
+
+
+开发工具:目前采用hive on MR的计算引擎，hivesql同时也支持 Hive on spark引擎，如果MR不能满足时效，可切换到Hive on spark引擎。
+
+ETL调度工具：Dolphin
+
+
+
+**2、历史脚本逻辑梳理**
+
+基于老数仓 的用户画像脚本，梳理加工逻辑，分析表间的关联关系；查看ODS设计文档，分析来源表的存储方式及主外键等基本信息。
+
+
+
+3、**设计模型**
+
+解决ETL花费时间较长的问题：  1、将标签分区存储，分别执行作业  2、将标签脚本性能调优·  3、基于一些标签共同的数据来源开发中间表
+
+| 分层设计                       | 分层规则                         | 存储方式     | 分区方式（yyyyMMdd） | 粒度           |
+| :----------------------------- | :------------------------------- | :----------- | :------------------- | :------------- |
+| ODS_MF                         | 表拆分：去除冗余字段             | 增量         | 业务发生时间         | 与源表保持一致 |
+| 表合并：业务关系紧密打宽处理   | 增量                             | 业务发生时间 | 按照最细粒度         |                |
+| 去重：增量表去重后保留最终状态 | 全量                             | 业务发生时间 | 与源表保持一致       |                |
+| ODS_SF                         | 相同业务系统且业务关系紧密       | 增量         | 业务发生时间         | 沃账户、日     |
+| 每日增量与前一日全量合并取最新 | 全量                             | 业务发生时间 | 沃账户、日           |                |
+| ODS_AF                         | 公用重度汇总指标较少，目前未加工 | 增量         | 业务发生时间         | 按需处理       |
+| DM_MA                          | 主要基于ODS_MF和ODS_SF层表加工   | 全量         | 业务发生时间         | 与需求一致     |
+
+
+
+六、**脚本开发**
+
+6.1 **开发上线流程**
+
+![img](../../blogImg/images/202309111610.png)
+
+1、标签开发：根据业务需求和应用场景梳理标签指标体系，调研业务上定义的数据口径，确认数据来源，开发相应的标签。标签开发在整个画像项目周期中占有较大比重。
+
+2、ETL调度开发：梳理需要调度的各任务之间的依赖关系，开发调度脚本及调度监控告警脚本，上线调度系统。
+
+3、上线文档准备
+
+
+
+6.2 **开发任务拆解**
+
+![img](../../blogImg/images/202309111612.png)
+
+
+
+6.3 **画像表结构设计**
+
+
+用户画像表结构设计没有固定格式，可以采用宽表或窄表，根据业务需求灵活选用，目前用户画像2.1采用宽表设计，相同业务标签归集到同张宽表。
+用户习惯信息宽表设计（见表1-1），主要记录用户习惯信息。
+
+| 字段名称          | 字段定义                        | hive字段类型  |
+| :---------------- | :------------------------------ | :------------ |
+| USER_NO           | 用户编号                        | string        |
+| MOST_LOGIN_TIME   | 近3个月登录沃账户次数最多时间段 | string        |
+| MOST_LOGIN_CHANL  | 近3个月登录沃账户次数最多渠道   | string        |
+| EARLYM_TRADE_NUM  | 近3个月月初交易次数             | decimal(12,0) |
+| EARLYM_TRADE_AMT  | 近3个月月初交易金额             | decimal(18,2) |
+| MIDDLEM_TRADE_NUM | 近3个月月中交易次数             | decimal(12,0) |
+| MIDDLEM_TRADE_AMT | 近3个月月中交易金额             | decimal(18,2) |
+| LATEM_TRADE_NUM   | 近3个月月末交易次数             | decimal(12,0) |
+| LATEM_TRADE_AMT   | 近3个月月末交易金额             | decimal(18,2) |
+| WORK_TRADE_NUM    | 近3个月工作日交易次数           | decimal(12,0) |
+| WORK_TRADE_AMT    | 近3个月工作日交易金额           | decimal(18,2) |
+| UNWORK_TRADE_NUM  | 近3个月非工作日交易次数         | decimal(12,0) |
+| UNWORK_TRADE_AMT  | 近3个月非工作日交易金额         | decimal(18,2) |
+| STAT_DATE         | 统计日期                        | string        |
+| EXEC_DATE         | 执行日期                        | string        |
+
+​                                                （表1-1）
+
+用户基本信息宽表设计（见表1-2），记录用户的基本属性信息
+
+| 字段名称               | 字段定义               | hive字段类型  |
+| :--------------------- | :--------------------- | :------------ |
+| 字段名称               | 字段定义               | hive字段类型  |
+| USER_NO                | 用户编号               | string        |
+| CUST_NO                | 客户编号               | string        |
+| PHONE_NO               | 手机号                 | string        |
+| PROV_NAME              | 省分                   | string        |
+| CITY_NAME              | 地市                   | string        |
+| PUBLIC_CITY            | 是否属于公缴城市       | string        |
+| VENDOR_TYPE            | 运营商                 | string        |
+| REGISTER_CHANL         | 注册渠道               | string        |
+| ACTIVATE_TIME          | 预开户用户激活时间     | string        |
+| REAL_TIME              | 实名认证时间           | string        |
+| REAL_LEVEL             | 实名等级               | string        |
+| USER_STATUS            | 用户状态               | string        |
+| REGISTER_DATE          | 注册日期               | string        |
+| REG_MONTHS             | 注册时长（月）         | decimal(18,2) |
+| BALANCE                | 沃账户余额             | decimal(18,2) |
+| FINANCE_AMT            | 理财总资产             | decimal(18,2) |
+| AGENT_FLAG             | 是否代理商             | string        |
+| COUPON_FLAG            | 是否开通电子券业务     | string        |
+| WOBAIF_FLAG            | 是否开通沃百富业务     | string        |
+| ZHHT_FLAG              | 是否开通账户户通业务   | string        |
+| CPC_FLAG               | 是否党员               | string        |
+| UNICOMPAY_FLAG         | 是否联通支付内部员工   | string        |
+| BDS_FLAG               | 是否联通集团员工       | string        |
+| EMP_SERV_FLAG          | 是否有员工服务交易     | string        |
+| WBX_FLAG               | 是否开通沃保险         | string        |
+| IDF_NO                 | 身份证号               | string        |
+| USER_SEX               | 性别                   | string        |
+| USER_AGE               | 年龄                   | string        |
+| STAT_DATE              | 统计日期               | string        |
+| EXEC_DATE              | 执行日期               | string        |
+| WZG_LIGHT_CONTACT_FLAG | 是否沃掌柜轻触点       | string        |
+| WZG_MIS_FLAG           | 是否自有厅营业员       | string        |
+| WZG_AGENT_FLAG         | 是否沃掌柜代理商营业员 | string        |
+| WZG_FLAG               | 是否沃掌柜注册         | string        |
+| WYD_FLAG               | 是否提交沃易贷订单     | string        |
+| WO_USER_VALUE          | 用户等级               | string        |
+| MAIL                   | 邮箱                   | string        |
+
+​                                             （见表1-2）
+
+**七、数据验证**
+
+ 1、查看脚本运行时长     
+
+ 2、验证工具：Impala结合Hive工具     
+
+ 3、比对目标表与老数仓目标表的数据差异并校正
+
+ 4、质量保障标签管理方法论，包括以下四点：
+
+- 每个标签定义第一责任人，用于快速响应业务需求，同时处理标签异常问题；
+- 流程优化，标签的流程较为漫长，需要了解业务、算法、开发的全流程，利用端到端的模式，通过快速响应增加标签规范化的评审工作；
+- 测试监控方面，测试在标签上线前对标签规范和质量输出测试报告，预测则是针对规范、枚举值等范围，建立监控预警机制；
+- 管理平台化，则是标签生产、加工、处理、应用全流程体系化、标签化、工具产品化，不断迭代升级。
+
 
 
 ### 1.3.4 数据服务
+
+
 
 
 
@@ -1906,6 +2166,8 @@ where id in (select process_definition_id from ts_bdt.t_ds_task_instance
 ### 1.4.1 基础知识
 
 基础知识速记: https://loujitao.github.io/%E4%BA%92%E8%81%94%E7%BD%91%E9%87%91%E8%9E%8D%E6%94%AF%E4%BB%98%E4%B8%9A%E5%8A%A1%E9%80%9A%E8%AF%86/
+
+
 
 
 
