--- a/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
+++ b/_posts/DataWareHouse/2021-07-28-数据仓库文档.md
@@ -1889,7 +1889,149 @@ where id in (select process_definition_id from ts_bdt.t_ds_task_instance
 
 
 
-### 1.3.2 维度建模
+### 1.3.2 任务调度
+
+#### 大数据调度系统使用规范
+
+本规范采用dolphinscheduler作为大数据调度系统使用
+
+#### 一.项目
+
+1.SRC,ODS层按照**系统简称**方式建项目
+
+2.DWD,DIM,DWS,DWA 层按照**数据域、业务域简称**建项目
+
+3.DM 层按照**主题域简称**建项目
+
+4.**项目描述建议必须填写**,按照功能描述填写即可.
+
+![](../../blogImg/images/202309111730.png)
+
+#### 二.工作流命名规范:
+
+总体按照数仓分层规范来定义各个项目中的工作流
+
+1.src按照系统简称加批次
+
+格式:src_业务系统名_批次
+
+批次目前分为:凌晨am2,am4,am6,am8
+
+0-2 点放到 am2批次
+
+2-4点放到 am4 批次
+
+4-6 点放到 am6 批次
+
+6-8 点放到 am8 批次
+
+8-10 点放到 am10 批次
+
+![](../../blogImg/images/202309111733.png)
+
+2.dwd以及以上与数仓命名方式保持一致
+
+数仓命名规范:    **详细参见1.2.3.1 部分**
+
+格式:
+
+DIM_数据域_业务域_T_维度关键词
+
+DWD_数据域_业务域_T_事实关键词_同步周期
+
+DM_主题域_分层名_T_集市描述关键词_统计周期
+
+
+
+#### 三.工作流使用规范
+
+##### 3.1说明:
+
+**SRC层同一批次进一个工作流**
+
+DWD,DIM采用**DEPENDENT节点**方式依赖 SRC 层, 不采用SUB_PROCESS防止 SRC多次同步互相影响.
+
+DWS,DWA 可以采用SUB_PROCESS节点方式将  DIM,DWD 作为子节点放入 DWS,DWS作为SUB_PROCESS节点方式放入DWA,也可以采用DEPENDENT。
+
+  DM采用**DEPENDENT节点**方式依赖各个层次.
+
+  统一使用工作流中的 shell 节点,采用**基础平台自行开发的sql脚本执行引擎**.
+
+##### 3.2规范:
+
+**3.2.1**.项目之间,**采用依赖(DEPENDENT)的方式**,而不是SUB_PROCESS,使用**最小依赖方式**. 
+
+  如 dwd 依赖 src 时,只依赖dwd 此工作流所用到的 src 1个或者多个工作流里的一个或多个节点,而不是选在 ALL依赖整个 src 工作流.
+
+**3.2.2**.制作工作流时要选定好 work分组:
+
+1).ext-bde:外部数据交换 work,在 app 区部署
+
+2).dw-bde:数仓数据交换 work,在 db 区部署
+
+**3.2.3**.禁止 APP 区 work 拿 DB 区数据,然后在写入 BD 区
+
+**3.2.4**.**工作流中的节点名称与表名对应**,或者你处理逻辑名对应,方便查看.
+
+失败重试次数统一设置为 3 次,失败重试间隔统一为1 分钟,依赖节点失败重试次数统一设置为 5 次,失败重试间隔为 10 分钟,建议多一级依赖失败次数可以+1
+
+![](../../blogImg/images/202309111738.png)
+
+**3.2.5** 工作流中节点在配置时要选择好work 分组.
+
+**3.2.6** 工作流保存时备注描述：上线人：xxx  功能： xxx
+
+![](../../blogImg/images/202309111736.png)
+
+#### 四.任务调度
+
+\1. 被其它工作流所DEPENDENT的需要自己有调度
+
+如 SRC 需要配置调度,因为 DWD 和 DIM 依赖SRC.
+
+DWA 需要配置调度,因为 DM 依赖DWA
+
+2.采用SUB_PROCESS方式的调度做到最后一层,如 DWD,DIM,DWS,DWA,应把调度做到 DWA.
+
+3.最后一层需要配置调度.
+
+如 DM需要配置调度
+
+ 4.涉及依赖的调度任务,调度时间与依赖层的调度时间可以保持一致.
+
+5.
+
+1)调度结束时间统一为默认的 2121 年
+
+2)失败策略为:继续
+
+3)通知策略:失败发
+
+4)优先级:按需,大多数默认即可.
+
+5)Worker分组:选择任务对应的 work 分组
+
+6)通知组:数科技术平台组
+
+7)抄送人: 按需 (失败告警按小组圈选人员，选定小组后。失败信息会通过企业微信通知到对应人员)
+
+6.配置完成调度,点击上线.
+
+#### 五.ETL资源
+
+1.ETL 所需资源(SQL), 采用 S3 的方式存储, 按照项目工作流命名规范格式存到对应的路径下.
+
+注意:
+
+1. 数据流向一般为SRC -> ODS -> DWD/DIM -> DWS [->DWA] ->DM。禁止向上依赖,如dwd 依赖 dws； 禁止ods依赖DM层等情况
+
+#### 六.上线流程 
+
+1.开发提交 sql,或者 py 脚本 到 gitlab
+
+2. 上线用户统一使用一个非管理员账号，但是上线任务需在描述中填写上线人员名称。
+
+3.配置任务调度
 
 
 
