--- a/_posts/2023-06-25-互联网业务术语汇总.md
+++ b/_posts/2023-06-25-互联网业务术语汇总.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: 互联网业务术语汇总
+date: 2024-10-30
+Author: 娄继涛
+categories: 业务
+tags: [名词,业务,互联网]
+comments: true
+---
+
+
+
 # 互联网业务术语汇总
 
 
